Header and Section 1

--- a/index.html
+++ b/index.html
@@ -11,19 +11,27 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>FoodChef - Never cook again!</title>
+    <title>FOODCHEF - Never cook again!</title>
   </head>
   <body>
     <header class="header">
       <img class="logo" alt="foodchef" src="img/foodchef.png" />
-      <nav class="main-nav">Navigation</nav>
+      <nav class="main-nav">
+        <ul class="main-nav-list">
+          <li><a class="main-nav-link" href="#">Section 1</a></li>
+          <li><a class="main-nav-link" href="#">Section 2</a></li>
+          <li><a class="main-nav-link" href="#">Section 3</a></li>
+          <li><a class="main-nav-link" href="#">Section 4</a></li>
+          <li><a class="main-nav-link nav-cta" href="#">Section 5</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
       <section class="section-hero">
         <div class="hero">
           <div class="hero-text-box">
             <h1 class="heading-primary">
-              A healthy meal delivered to your door, every single day
+              <!-- A healthy meal delivered to your door, every single day -->
             </h1>
             <p class="hero-description">
               The smart 365-days-per-year food subscription that will make you
@@ -38,10 +46,10 @@
             <div class="delivered-meals">
               <div class="delivered-imgs">
                 <img src="img/customers/customer-1.jpg" alt="Customer photo" />
-                <img src="img/customers/customer-2.jpg" alt="Customer photo" />
+                <img src="img/customers/customer-7.jpg" alt="Customer photo" />
+                <img src="img/customers/customer-8.jpg" alt="Customer photo" />
+                <img src="img/customers/customer-9.jpg" alt="Customer photo" />
                 <img src="img/customers/customer-3.jpg" alt="Customer photo" />
-                <img src="img/customers/customer-4.jpg" alt="Customer photo" />
-                <img src="img/customers/customer-5.jpg" alt="Customer photo" />
                 <img src="img/customers/customer-6.jpg" alt="Customer photo" />
               </div>
               <p class="delivered-text">
