--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="hero">
           <div class="hero-text-box">
             <h1 class="heading-primary">
-              <!-- A healthy meal delivered to your door, every single day -->
+              A healthy meal delivered to your door, every single day
             </h1>
             <p class="hero-description">
               The smart 365-days-per-year food subscription that will make you
@@ -64,6 +64,14 @@
               alt="Woman enjoying food, meals in storage container, and food bowls on a table"
             />
           </div>
+        </div>
+      </section>
+      <section class="section-how">
+        <div class="grid container grid--2-cols">
+          <div>Test 1</div>
+          <div>Test 2</div>
+          <div>Test 3</div>
+          <div>Test 4</div>
         </div>
       </section>
     </main>
