--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               Tell us what you like (and what not):
             </h3>
             <p class="step-description">
-              Never again waste time thinking about what to eat! Omnifood AI
+              Never again waste time thinking about what to eat! FOODCHEF AI
               will create a 100% personalized weekly meal plan just for you. It
               makes sure you get all the nutrients and vitamins you need, no
               matter what diet you follow!
@@ -109,7 +109,7 @@
             <p class="step-number">02</p>
             <h3 class="heading-tertiary">Approve your weekly meal plan:</h3>
             <p class="step-description">
-              Once per week, approve the meal plan generated for you by Omnifood
+              Once per week, approve the meal plan generated for you by FOODCHEF
               AI. You can change ingredients, swap entire meals, or even add
               your own recipes.
             </p>
