--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
         </div>
       </section>
 
-      <!-- SECTION PRICING -->
+      <!-- 6.SECTION PRICING -->
 
       <section class="section-pricing">
         <div class="container">
@@ -546,6 +546,21 @@
               Going on vacation? Just pause your subscription, and we refund
               unused days.
             </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- 7.SECTION CTA -->
+
+      <section class="section-cta">
+        <div class="container">
+          <div class="cta">
+            <div class="cta-text-box"></div>
+            <div
+              class="cta-image-box"
+              role="img"
+              aria-label="Woman enjoying food"
+            ></div>
           </div>
         </div>
       </section>
