--- a/index.html
+++ b/index.html
@@ -24,14 +24,16 @@
   </head>
   <body>
     <header class="header">
-      <img class="logo" alt="foodchef" src="img/foodchef.png" />
+      <a href="#">
+        <img class="logo" alt="foodchef" src="img/foodchef.png" />
+      </a>
       <nav class="main-nav">
         <ul class="main-nav-list">
-          <li><a class="main-nav-link" href="#">Section 1</a></li>
-          <li><a class="main-nav-link" href="#">Section 2</a></li>
-          <li><a class="main-nav-link" href="#">Section 3</a></li>
-          <li><a class="main-nav-link" href="#">Section 4</a></li>
-          <li><a class="main-nav-link nav-cta" href="#">Section 5</a></li>
+          <li><a class="main-nav-link" href="#">How it works</a></li>
+          <li><a class="main-nav-link" href="#">Meals</a></li>
+          <li><a class="main-nav-link" href="#">Testimonials</a></li>
+          <li><a class="main-nav-link" href="#">Pricing</a></li>
+          <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
         </ul>
       </nav>
     </header>
@@ -63,7 +65,7 @@
                 <img src="img/customers/customer-6.jpg" alt="Customer photo" />
               </div>
               <p class="delivered-text">
-                <span>250,000+</span> meals delivered last year!
+                <span>2,50,000+</span> meals delivered last year!
               </p>
             </div>
           </div>
@@ -238,7 +240,7 @@
                 </li>
                 <li class="meal-attribute">
                   <ion-icon class="meal-icon" name="star-outline"></ion-icon
-                  ><span> <strong>4.5</strong> rating (441)</span>
+                  ><span> <strong>4.6</strong> rating (441)</span>
                 </li>
               </ul>
             </div>
@@ -294,7 +296,7 @@
       <section class="section-testimonials">
         <div class="testimonials-container">
           <span class="subheading">Testimonials</span>
-          <h2 class="wth">Once you try it, you can't go back</h2>
+          <h2 class="heading-secondary">Once you try it, you can't go back</h2>
 
           <div class="testimonials">
             <figure class="testimonial">
@@ -453,8 +455,10 @@
           <div class="pricing-plan pricing--starter">
             <header class="plan-header">
               <p class="plan-name">Starter</p>
-              <p class="plan-price"><span>$</span>399</p>
-              <p class="plan-text">per month. That's just $13 per meal!</p>
+              <p class="plan-price">
+                <span>&#8377;</span>7,499<span class="dum">/ month</span>
+              </p>
+              <p class="plan-text">That's just &#8377;250 per meal !</p>
             </header>
             <ul class="list">
               <li class="list-item">
@@ -472,7 +476,7 @@
 
               <li class="list-item">
                 <ion-icon class="list-icon" name="close-outline"></ion-icon>
-                <span>Get access to latest recipes</span>
+                <!-- <span>Get access to latest recipes</span> -->
               </li>
             </ul>
             <div class="plan-sign-up">
@@ -482,8 +486,10 @@
           <div class="pricing-plan pricing--complete">
             <header class="plan-header">
               <p class="plan-name">Complete</p>
-              <p class="plan-price"><span>$</span>649</p>
-              <p class="plan-text">per month. That's just $11 per meal!</p>
+              <p class="plan-price">
+                <span>&#8377;</span>11,999<span class="dum">/ month</span>
+              </p>
+              <p class="plan-text">That's just &#8377;200 per meal !</p>
             </header>
             <ul class="list">
               <li class="list-item">
@@ -555,7 +561,47 @@
       <section class="section-cta">
         <div class="container">
           <div class="cta">
-            <div class="cta-text-box"></div>
+            <div class="cta-text-box">
+              <h2 class="heading-secondary">Get your first meal for free!</h2>
+              <p class="cta-text">
+                Healthy, tasty and hassle-free meals are waiting for you. Start
+                eating well today. You can cancel or pause anytime. And the
+                first meal is on us!
+              </p>
+              <form class="cta-form" action="#">
+                <div>
+                  <label for="full-name">Full Name</label>
+                  <input
+                    id="full-name"
+                    type="text"
+                    placeholder="Pravin Kanth"
+                    required
+                  />
+                </div>
+                <div>
+                  <label for="email">Email address</label>
+                  <input
+                    id="email"
+                    type="email"
+                    placeholder="me@example.com"
+                    required
+                  />
+                </div>
+                <div>
+                  <label for="select-where">Where did you hear from us?</label>
+
+                  <select id="select-where" required>
+                    <option value="">Please choose one option</option>
+                    <option value="friends">Friends and family</option>
+                    <option value="youtube">YouTube video</option>
+                    <option value="podcast">Podcast</option>
+                    <option value="others">Others</option>
+                  </select>
+                </div>
+
+                <button class="btn btn--form">Sign up now</button>
+              </form>
+            </div>
             <div
               class="cta-image-box"
               role="img"
@@ -565,5 +611,74 @@
         </div>
       </section>
     </main>
+    <footer class="footer">
+      <div class="container grid grid--footer">
+        <div class="logo-col">
+          <a class="footer-logo" href="#">
+            <img class="logo" alt="foodchef" src="img/foodchef.png" />
+          </a>
+          <ul class="social-links">
+            <li>
+              <a class="footer-link" href="#"
+                ><ion-icon class="social-icon" name="logo-instagram"></ion-icon
+              ></a>
+            </li>
+            <li>
+              <a class="footer-link" href="#"
+                ><ion-icon class="social-icon" name="logo-facebook"></ion-icon
+              ></a>
+            </li>
+            <li>
+              <a class="footer-link" href="#"
+                ><ion-icon class="social-icon" name="logo-twitter"></ion-icon
+              ></a>
+            </li>
+          </ul>
+          <p class="copyright">
+            Copyright &copy;2023 by FOODCHEF, Inc. All rights are reserved.
+          </p>
+        </div>
+        <div class="address-col">
+          <p class="footer-heading">Contact us</p>
+          <address class="contacts">
+            <p>12/94, Somanur, Coimbatore, TN 641-668</p>
+            <p>
+              <a class="footer-link" href="tel:6383683533">+91 6383683533</a
+              ><br /><a
+                class="footer-link"
+                href="mailto:r.pravinkanth653@gmail.com"
+                >contact@foodchef.com</a
+              >
+            </p>
+          </address>
+        </div>
+        <nav class="nav-col">
+          <p class="footer-heading">Account</p>
+          <ul class="footer-nav">
+            <li><a class="footer-link" href="#">Create account</a></li>
+            <li><a class="footer-link" href="#">Sign in</a></li>
+            <li><a class="footer-link" href="#">iOS app</a></li>
+            <li><a class="footer-link" href="#">Android app</a></li>
+          </ul>
+        </nav>
+        <nav class="nav-col">
+          <p class="footer-heading">Company</p>
+          <ul class="footer-nav">
+            <li><a class="footer-link" href="#">About FOODCHEF</a></li>
+            <li><a class="footer-link" href="#">For Business</a></li>
+            <li><a class="footer-link" href="#">Cooking partners</a></li>
+            <li><a class="footer-link" href="#">Careers</a></li>
+          </ul>
+        </nav>
+        <nav class="nav-col">
+          <p class="footer-heading">Resources</p>
+          <ul class="footer-nav">
+            <li><a class="footer-link" href="#">Recipe directory</a></li>
+            <li><a class="footer-link" href="#">Help center</a></li>
+            <li><a class="footer-link" href="#">Privacy & terms</a></li>
+          </ul>
+        </nav>
+      </div>
+    </footer>
   </body>
 </html>
