--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     />
     <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/queries.css" />
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
@@ -20,6 +21,7 @@
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
+    <script defer src="js/script.js"></script>
     <title>FOODCHEF - Never cook again!</title>
   </head>
   <body>
@@ -36,6 +38,10 @@
           <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
         </ul>
       </nav>
+      <button class="btn-mobile-nav">
+        <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+        <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+      </button>
     </header>
     <main>
       <!-- 1.SECTION HERO -->
@@ -635,7 +641,8 @@
             </li>
           </ul>
           <p class="copyright">
-            Copyright &copy;2023 by FOODCHEF, Inc. All rights are reserved.
+            Copyright &copy;<span id="year"></span> by FOODCHEF, Inc. All rights
+            are reserved.
           </p>
         </div>
         <div class="address-col">
