--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
               </li>
             </ul>
             <div class="plan-sign-up">
-              <a href="#" class="btn btn--full">Start eating well</a>
+              <a href="#" class="btn btn--full btn-dum">Start eating well</a>
             </div>
           </div>
           <div class="pricing-plan pricing--complete">
@@ -516,7 +516,7 @@
               </li>
             </ul>
             <div class="plan-sign-up">
-              <a href="#" class="btn btn--full">Start eating well</a>
+              <a href="#" class="btn btn--full btn-dum">Start eating well</a>
             </div>
           </div>
         </div>
@@ -617,6 +617,8 @@
         </div>
       </section>
     </main>
+
+    <!-- 8.Section Footer -->
     <footer class="footer">
       <div class="container grid grid--footer">
         <div class="logo-col">
@@ -625,7 +627,7 @@
           </a>
           <ul class="social-links">
             <li>
-              <a class="footer-link" href="#"
+              <a class="footer-link" href="https://www.instagram.com/p._.kanth/"
                 ><ion-icon class="social-icon" name="logo-instagram"></ion-icon
               ></a>
             </li>
@@ -635,7 +637,7 @@
               ></a>
             </li>
             <li>
-              <a class="footer-link" href="#"
+              <a class="footer-link" href="https://twitter.com/Pravin_Kanth03"
                 ><ion-icon class="social-icon" name="logo-twitter"></ion-icon
               ></a>
             </li>
