Completion of FOODCHEF

--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="icon" href="img/favicon.png" />
+    <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
+    <link rel="manifest" href="manifest.webmanifest" />
+    <meta
+      name="description"
+      content="FOODCHEF is an AI-powered food subscription that will make you eat healthy again, 365 days per year. It's Tailored to your personal tastes and nutritional needs."
+      <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap"
@@ -22,7 +31,7 @@
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
     <script defer src="js/script.js"></script>
-    <title>FOODCHEF - Never cook again!</title>
+    <title>FOODCHEF &mdash; Never cook again!</title>
   </head>
   <body>
     <header class="header">
@@ -31,11 +40,13 @@
       </a>
       <nav class="main-nav">
         <ul class="main-nav-list">
-          <li><a class="main-nav-link" href="#">How it works</a></li>
-          <li><a class="main-nav-link" href="#">Meals</a></li>
-          <li><a class="main-nav-link" href="#">Testimonials</a></li>
-          <li><a class="main-nav-link" href="#">Pricing</a></li>
-          <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
+          <li><a class="main-nav-link" href="#how">How it works</a></li>
+          <li><a class="main-nav-link" href="#meals">Meals</a></li>
+          <li>
+            <a class="main-nav-link" href="#testimonials">Testimonials</a>
+          </li>
+          <li><a class="main-nav-link" href="#pricing">Pricing</a></li>
+          <li><a class="main-nav-link nav-cta" href="#cta">Try for free</a></li>
         </ul>
       </nav>
       <button class="btn-mobile-nav">
@@ -56,18 +67,18 @@
               eat healthy again. Tailored to your personal tastes and
               nutritional needs.
             </p>
-            <a href="#" class="btn btn--full margin-right-sm"
+            <a href="#cta" class="btn btn--full margin-right-sm"
               >Start eating well</a
             >
-            <a href="#" class="btn btn--outline">Learn more &darr;</a>
+            <a href="#how" class="btn btn--outline">Learn more &darr;</a>
 
             <div class="delivered-meals">
               <div class="delivered-imgs">
                 <img src="img/customers/customer-1.jpg" alt="Customer photo" />
-                <img src="img/customers/customer-7.jpg" alt="Customer photo" />
-                <img src="img/customers/customer-8.jpg" alt="Customer photo" />
-                <img src="img/customers/customer-9.jpg" alt="Customer photo" />
+                <img src="img/customers/customer-2.jpg" alt="Customer photo" />
                 <img src="img/customers/customer-3.jpg" alt="Customer photo" />
+                <img src="img/customers/customer-4.jpg" alt="Customer photo" />
+                <img src="img/customers/customer-5.jpg" alt="Customer photo" />
                 <img src="img/customers/customer-6.jpg" alt="Customer photo" />
               </div>
               <p class="delivered-text">
@@ -76,11 +87,15 @@
             </div>
           </div>
           <div class="hero-img-box">
-            <img
-              src="img/hero.png"
-              class="hero-img"
-              alt="Woman enjoying food, meals in storage container, and food bowls on a table"
-            />
+            <picture>
+              <source srcset="img/hero.webp" type="image/webp" />
+              <source srcset="img/hero-min.png" type="image/png" />
+              <img
+                src="img/hero-min.png"
+                class="hero-img"
+                alt="Woman enjoying food, meals in storage container, and food bowls on a table"
+              />
+            </picture>
           </div>
         </div>
       </section>
@@ -108,7 +123,7 @@
 
       <!-- 3.SECTION HOW -->
 
-      <section class="section-how">
+      <section class="section-how" id="how">
         <div class="container">
           <span class="subheading">How it works</span>
           <h2 class="heading-secondary">
@@ -181,7 +196,7 @@
 
       <!-- 4.SECTION MEALS -->
 
-      <section class="section-meals">
+      <section class="section-meals" id="meals">
         <div class="container center-text">
           <span class="subheading">Meals</span>
           <h2 class="heading-secondary">
@@ -299,7 +314,7 @@
       </section>
 
       <!-- 5.SECTION TESTIMONIALS -->
-      <section class="section-testimonials">
+      <section class="section-testimonials" id="testimonials">
         <div class="testimonials-container">
           <span class="subheading">Testimonials</span>
           <h2 class="heading-secondary">Once you try it, you can't go back</h2>
@@ -309,7 +324,7 @@
               <img
                 class="testimonial-img"
                 alt="Photo of customer Nigun Sanjai"
-                src="img/customers/customer-7.jpg"
+                src="img/customers/customer-2.jpg"
               />
               <blockquote class="testimonial-text">
                 Inexpensive, healthy and great-tasting meals, without even
@@ -322,7 +337,7 @@
               <img
                 class="testimonial-img"
                 alt="Photo of customer Jeisri "
-                src="img/customers/customer-8.jpg"
+                src="img/customers/customer-3.jpg"
               />
               <blockquote class="testimonial-text">
                 The AI algorithm is crazy good, it chooses the right meals for
@@ -335,7 +350,7 @@
               <img
                 class="testimonial-img"
                 alt="Photo of customer Mohana Priyaa"
-                src="img/customers/customer-3.jpg"
+                src="img/customers/customer-5.jpg"
               />
               <blockquote class="testimonial-text">
                 FOODCHEF is a life saver! I just started a company, so there's
@@ -348,7 +363,7 @@
               <img
                 class="testimonial-img"
                 alt="Photo of customer Madhan"
-                src="img/customers/customer-9.jpg"
+                src="img/customers/customer-4.jpg"
               />
               <blockquote class="testimonial-text">
                 I got FOODCHEF for the whole family, and it frees up so much
@@ -450,7 +465,7 @@
 
       <!-- 6.SECTION PRICING -->
 
-      <section class="section-pricing">
+      <section class="section-pricing" id="pricing">
         <div class="container">
           <span class="subheading">Pricing</span>
           <h2 class="heading-secondary">
@@ -564,7 +579,7 @@
 
       <!-- 7.SECTION CTA -->
 
-      <section class="section-cta">
+      <section class="section-cta" id="cta">
         <div class="container">
           <div class="cta">
             <div class="cta-text-box">
