--- a/index.html
+++ b/index.html
@@ -322,13 +322,13 @@
               <img
                 class="testimonial-img"
                 alt="Photo of customer Nigun Sanjai"
-                src="img/customers/customer-2.jpg"
+                src="img/customers/nagulan1.jpg"
               />
               <blockquote class="testimonial-text">
                 Inexpensive, healthy and great-tasting meals, without even
                 having to order manually! It feels truly magical.
               </blockquote>
-              <p class="testimonial-name">&mdash; Nigun Sanjai</p>
+              <p class="testimonial-name">&mdash; Nagulan</p>
             </figure>
 
             <figure class="testimonial">
